--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>One Meditation App – Legal</title>
+    <title>BidGrip App – Legal</title>
     <style>
       /* Simple styling to make it look decent on mobile */
       body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; padding: 20px; line-height: 1.6; }
@@ -12,7 +12,7 @@
     </style>
   </head>
   <body>
-    <h1>One Meditation App</h1>
+    <h1>BidGrip App</h1>
     <p>Welcome to the legal and support hub.</p>
     
     <h3>Menu</h3>
